# fdf

./: ._42.fdf  ._minilibx  ._test_maps  CMakeLists.txt  Makefile  a.out  fdf.c  fdf.h  fdf.h.gch  ft_draw.c  ft_image.c  ft_isometric.c  ft_keycode.c  ft_readmap.c  ft_valid.c  kzahr.c  main.c  mlx
libft/: ._ft_atoi.c  ._ft_atoi_base.c  ._ft_itoa.c  ._ft_strstr.c  libft.h
minilibx/: ._Makefile  .__README_  ._font.c  ._font.xcf  ._man  ._mlx.h  ._mlx_init_loop.m  ._mlx_int.h  ._mlx_int_str_to_wordtab.c  ._mlx_new_image.m  ._mlx_new_window.h  ._mlx_new_window.m  ._mlx_rgb.c  ._mlx_shaders.c  ._mlx_xpm.c  mlx.h.gch
minilibx/man/: ._man3
minilibx/man/man3/: ._mlx.1  ._mlx_loop.1  ._mlx_new_image.1  ._mlx_new_window.1  ._mlx_pixel_put.1
test_maps/: ._10-2.fdf  ._10-70.fdf  ._100-6.fdf  ._20-60.fdf  ._42.fdf  ._50-4.fdf  ._basictest.fdf  ._elem-col.fdf  ._elem-fract.fdf  ._elem.fdf  ._elem2.fdf  ._julia.fdf  ._mars.fdf  ._pentenegpos.fdf  ._plat.fdf  ._pnp_flat.fdf  ._pylone.fdf  ._pyra.fdf  ._pyramide.fdf  ._t1.fdf  ._t2.fdf  ._u.fdf  ._u_lar.fdf  ._u_med.fdf  u.fdf  u_lar.fdf  u_med.fdf
